--- a/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/PRE_BS_sulf_DR_counts.Rmd
+++ b/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/PRE_BS_sulf_DR_counts.Rmd
@@ -143,7 +143,7 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Sulfentrazone dose (g ai ha"^-1, ")")),
+     xlab = expression(paste("Sulfentrazone rate (g ai ha"^-1, ")")),
      ylab = expression(paste("Plant Density (plant EU"^-1, ")")),
      ylim = c(0, 8),
      col = c("red", "darkgreen"),
@@ -152,7 +152,7 @@ plot(model.LL3,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.4,
-     legendPos = c(700, 6),
+     legendPos = c(700, 6.5),
      lwd = 1)
 
 
@@ -171,28 +171,28 @@ abline(v = 280,
        col = "black")
 
 
-text(x = 680, y = 3.0, 
-     labels = expression(paste("ED"[50] ~ "BS = 87.6 ("%+-% "18.1)")),
+text(x = 750, y = 3.0, 
+     labels = expression(paste("ED"[50] ~ "A92 = 87.6 ("%+-% "18.1)"^A)),
      cex = 1.3,
      col = "black",
      font = 2)
 
 
-text(x = 700, y = 2.6, 
-     labels = expression(paste("ED"[50] ~ "A66 = 32.8 ("%+-% "11.3)")),
+text(x = 750, y = 2.6, 
+     labels = expression(paste("ED"[50] ~ "A66 = 32.8 ("%+-% "11.3)"^B)),
      cex = 1.3,
      col = "black",
      font = 2)
 
 
-text(x = 500, y = 2.2, 
+text(x = 520, y = 2.2, 
      labels = expression("p-value = 0.01"),
      cex = 1.3,
      col = "black",
      font = 2)
 
 
-text(x = 580, y = 1.2, 
+text(x = 580, y = 0.9, 
      labels = expression("1x rate: 280 g ai ha" ^-1),
      cex = 1.2,
      col = "black",
