--- a/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/PRE_BS_fome_DR_counts.Rmd
+++ b/PhD/WiscWeeds/Waterhemp PRE_Bill Stangel/PRE_BS_fome_DR_counts.Rmd
@@ -145,7 +145,7 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL4,
      type = "average",
-     xlab = expression(paste("Fomesafen dose (g ai ha"^-1, ")")),
+     xlab = expression(paste("Fomesafen rate (g ai ha"^-1, ")")),
      ylab = expression(paste("Plant Density (plant EU"^-1, ")")),
      ylim = c(0, 15),
      col = c("red", "darkgreen"),
@@ -154,7 +154,7 @@ plot(model.LL4,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.4,
-     legendPos = c(680, 11),
+     legendPos = c(680, 14),
      lwd = 1)
 
 
@@ -173,28 +173,28 @@ abline(v = 263,
        col = "black")
 
 
-text(x = 650, y = 6.0, 
-     labels = expression(paste("ED"[50] ~ "A92 = 132.0 ("%+-% "37.3)")),
+text(x = 750, y = 7.0, 
+     labels = expression(paste("ED"[50] ~ "A92 = 132.0 ("%+-% "37.3)"^A)),
      cex = 1.3,
      col = "black",
      font = 2)
 
 
-text(x = 645, y = 5.2, 
-     labels = expression(paste("ED"[50] ~ "A66 = 13.5 ("%+-% "24.6)")),
+text(x = 720, y = 6.2, 
+     labels = expression(paste("ED"[50] ~ "A66 = 13.5 ("%+-% "24.6)"^B)),
      cex = 1.3,
      col = "black",
      font = 2)
 
 
-text(x = 460, y = 4.4, 
+text(x = 500, y = 5.4, 
      labels = expression("p-value < 0.01"),
      cex = 1.3,
      col = "black",
      font = 2)
 
 
-text(x = 520, y = 3, 
+text(x = 550, y = 3, 
      labels = expression("1x rate: 263 g ai ha" ^-1),
      cex = 1.2,
      col = "black",
