--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/MIs_2,4-D_GH.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GH/2,4-D/MIs_2,4-D_GH.Rmd
@@ -145,7 +145,7 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("2,4-D dose (g ai ha"^-1, ")")),
+     xlab = expression(paste("2,4-D rate (g ae ha"^-1, ")")),
      ylab = expression(paste("Biomass (g plant"^-1, ")")),
      ylim = c(0, 4),
      col = c("darkgreen", "red", "navy", "orange"),
@@ -208,7 +208,7 @@ text(x = 4200, y = 1.4,
 
 
 text(x = 3200, y = 0.7, 
-     labels = expression("1x rate: 1065 g ai ha" ^-1),
+     labels = expression("1x rate: 1065 g ae ha" ^-1),
      cex = 1.0,
      col = "black",
      font = 2)
