--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/MIs_2,4-D_GC _A82.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/MIs_2,4-D_GC _A82.Rmd
@@ -331,10 +331,10 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("2,4-D+P450 dose (g ae ha"^-1, ")")),
+     xlab = expression(paste("2,4-D+P450 rate (g ae ha"^-1, ")")),
      ylab = expression(paste("A82 biomass (g plant"^-1, ")")),
      ylim = c(0, 4),
-     col = c("darkgreen", "red"),
+     col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.0,
      cex.axis = 1,
@@ -378,7 +378,7 @@ text(x = 3500, y = 1.3,
 
 
 text(x = 2500, y = 0.3, 
-     labels = expression("1x rate: 1065 g ai ha" ^-1),
+     labels = expression("1x rate: 1065 g ae ha" ^-1),
      cex = 1.1,
      col = "black",
      font = 2)
