--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _A82.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _A82.Rmd
@@ -136,7 +136,7 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/GC_Meso Only_A82_DR biomass.tiff.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/GC_Meso Only_A82_DR biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -145,16 +145,16 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Mesotrione dose (g ai ha"^-1, ")")),
+     xlab = expression(paste("Mesotrione rate (g ai ha"^-1, ")")),
      ylab = expression(paste("A82 biomass (g plant"^-1, ")")),
      ylim = c(0, 6),
-     col = c("darkgreen", "red"),
+     col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.0,
      cex.axis = 1,
      cex.lab = 1.5,
      cex.legend = 1.3,
-     legendPos = c(350, 4.5),
+     legendPos = c(400, 4.5),
      lwd = 1)
 
 
@@ -174,16 +174,16 @@ abline(v = 105.1,
        col = "black")
 
 
-text(x = 330, y = 3.0, 
-     labels = expression("Elevated Upper Limit = 5.7 ("%+-% "0.2)" ^A),
+text(x = 340, y = 3.0, 
+     labels = expression("Elevated 0x biomass = 5.7 ("%+-% "0.2)" ^A),
      cex = 1.0,
      col = "black",
      font = 2)
 
 
 
-text(x = 320, y = 2.7, 
-     labels = expression("Ambient Upper Limit = 3.6 ("%+-% "0.2)" ^B),
+text(x = 330, y = 2.7, 
+     labels = expression("Ambient 0x biomass = 3.6 ("%+-% "0.2)" ^B),
      cex = 1.0,
      col = "black",
      font = 2)
@@ -191,7 +191,7 @@ text(x = 320, y = 2.7,
 
 
 text(x = 250, y = 0.7, 
-     labels = expression("1x rate: 105.1 g ai ha" ^-1),
+     labels = expression("1x rate: 105 g ai ha" ^-1),
      cex = 1.1,
      col = "black",
      font = 2)
