--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/MIs_2,4-D_GC _A101.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/MIs_2,4-D_GC _A101.Rmd
@@ -145,10 +145,10 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("2,4-D dose (g ai ha"^-1, ")")),
+     xlab = expression(paste("2,4-D rate (g ae ha"^-1, ")")),
      ylab = expression(paste("A101 biomass (g plant"^-1, ")")),
      ylim = c(0, 5),
-     col = c("darkgreen", "red"),
+     col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.0,
      cex.axis = 1,
@@ -176,7 +176,7 @@ abline(v = 1065,
 
 
 text(x = 3300, y = 2.8, 
-     labels = expression("Elevated Upper Limit = 3.2 ("%+-% "0.2)" ^A),
+     labels = expression("Elevated 0x biomass = 3.2 ("%+-% "0.2)" ^A),
      cex = 1.0,
      col = "black",
      font = 2)
@@ -184,7 +184,7 @@ text(x = 3300, y = 2.8,
 
 
 text(x = 3300, y = 2.6, 
-     labels = expression("Ambient Upper Limit = 2.0 ("%+-% "0.2)" ^B),
+     labels = expression("Ambient 0x biomass = 2.0 ("%+-% "0.2)" ^B),
      cex = 1.0,
      col = "black",
      font = 2)
@@ -193,7 +193,7 @@ text(x = 3300, y = 2.6,
 
 
 text(x = 2500, y = 0.9, 
-     labels = expression("1x rate: 1065 g ai ha" ^-1),
+     labels = expression("1x rate: 1065 g ae ha" ^-1),
      cex = 1.1,
      col = "black",
      font = 2)
