--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _A101.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _A101.Rmd
@@ -331,10 +331,10 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Mesotrione+P450-inhibitor dose (g ai ha"^-1, ")")),
+     xlab = expression(paste("Mesotrione+P450-inhibitor rate (g ai ha"^-1, ")")),
      ylab = expression(paste("A101 biomass (g plant"^-1, ")")),
      ylim = c(0, 4.5),
-     col = c("darkgreen", "red"),
+     col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.0,
      cex.axis = 1,
@@ -377,15 +377,9 @@ text(x = 315, y = 2.0,
 
 
 
-text(x = 220, y = 1.8, 
-     labels = expression("p-value < 0.0001"),
-     cex = 1.2,
-     col = "black",
-     font = 2)
-
 
 text(x = 250, y = 0.7, 
-     labels = expression("1x rate: 105.1 g ai ha" ^-1),
+     labels = expression("1x rate: 105 g ai ha" ^-1),
      cex = 1.1,
      col = "black",
      font = 2)
