--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Atrazine/MIs_atra_GC _A101.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Atrazine/MIs_atra_GC _A101.Rmd
@@ -145,10 +145,10 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Atrazine dose (g ai ha"^-1, ")")),
+     xlab = expression(paste("Atrazine rate (g ai ha"^-1, ")")),
      ylab = expression(paste("A101 Biomass (g plant"^-1, ")")),
      ylim = c(0, 4),
-     col = c("darkgreen", "red"),
+     col = c("red", "darkgreen"),
      pch = c(19, 17),
      cex = 1.0,
      cex.axis = 1,
