--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/MIs_2,4-D_GC _A82.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/MIs_2,4-D_GC _A82.Rmd
@@ -150,12 +150,13 @@ plot(model.LL3,
      ylim = c(0, 4),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
-     cex = 1.0,
-     cex.axis = 1,
-     cex.lab = 1.5,
-     cex.legend = 1.3,
-     legendPos = c(4500, 3.0),
-     lwd = 1)
+     cex = 1.5,
+     cex.axis = 1.3,
+     cex.lab = 1.9,
+     cex.legend = 1.8,
+     legendPos = c(4500, 3.8),
+     lwd = 1.5)
+
 
 
 
@@ -164,38 +165,37 @@ points(x = c(summary(model.LL3)$coefficients[5, 1],
        y = c((summary(model.LL3)$coefficients[3, 1]/2), 
              (summary(model.LL3)$coefficients[4, 1]/2)),
        pch = 8,
-       cex = 1.3)
+       cex = 1.5)
+
+
+#abline(v = 1065, 
+       #lwd = 2, 
+       #lty = "twodash",
+       #col = "black")
 
 
 
-abline(v = 1065, 
-       lwd = 2, 
-       lty = "twodash",
-       col = "black")
+#text(x = 3450, y = 1.5, 
+     #labels = expression(paste("ED"[50] ~ "ambient = 44.1 ("%+-% "34.8)" ^A)),
+     #cex = 1.2,
+     #col = "black",
+     #font = 2)
 
 
 
-text(x = 3450, y = 1.5, 
-     labels = expression(paste("ED"[50] ~ "ambient = 44.1 ("%+-% "34.8)" ^A)),
-     cex = 1.2,
-     col = "black",
-     font = 2)
+#text(x = 3500, y = 1.3, 
+     #labels = expression(paste("ED"[50] ~ "elevated = 126.0 ("%+-% "6.7)" ^B)),
+     #cex = 1.2,
+     #col = "black",
+     #font = 2)
 
 
 
-text(x = 3500, y = 1.3, 
-     labels = expression(paste("ED"[50] ~ "elevated = 126.0 ("%+-% "6.7)" ^B)),
-     cex = 1.2,
-     col = "black",
-     font = 2)
-
-
-
-text(x = 2500, y = 0.3, 
-     labels = expression("1x rate: 1065 g ae ha" ^-1),
-     cex = 1.1,
-     col = "black",
-     font = 2)
+#text(x = 2500, y = 0.3, 
+     #labels = expression("1x rate: 1065 g ae ha" ^-1),
+     #cex = 1.1,
+     #col = "black",
+     #font = 2)
 
 
 dev.off()
@@ -336,12 +336,12 @@ plot(model.LL3,
      ylim = c(0, 4),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
-     cex = 1.0,
-     cex.axis = 1,
-     cex.lab = 1.5,
-     cex.legend = 1.3,
-     legendPos = c(4500, 3.0),
-     lwd = 1)
+    cex = 1.5,
+     cex.axis = 1.3,
+     cex.lab = 1.9,
+     cex.legend = 1.8,
+     legendPos = c(4500, 3.8),
+     lwd = 1.5)
 
 
 
@@ -354,34 +354,34 @@ points(x = c(summary(model.LL3)$coefficients[5, 1],
 
 
 
-abline(v = 1065, 
-       lwd = 2, 
-       lty = "twodash",
-       col = "black")
+#abline(v = 1065, 
+       #lwd = 2, 
+       #lty = "twodash",
+       #col = "black")
 
 
 
-text(x = 3450, y = 1.5, 
-     labels = expression(paste("ED"[50] ~ "elevated = 22.9 ("%+-% "17.6)" ^A)),
-     cex = 1.2,
-     col = "black",
-     font = 2)
+#text(x = 3450, y = 1.5, 
+     #labels = expression(paste("ED"[50] ~ "elevated = 22.9 ("%+-% "17.6)" ^A)),
+     #cex = 1.2,
+     #col = "black",
+     #font = 2)
 
 
 
-text(x = 3500, y = 1.3, 
-     labels = expression(paste("ED"[50] ~ "ambient = 109.9 ("%+-% "14.6)" ^B)),
-     cex = 1.2,
-     col = "black",
-     font = 2)
+#text(x = 3500, y = 1.3, 
+     #labels = expression(paste("ED"[50] ~ "ambient = 109.9 ("%+-% "14.6)" ^B)),
+     #cex = 1.2,
+     #col = "black",
+     #font = 2)
 
 
 
-text(x = 2500, y = 0.3, 
-     labels = expression("1x rate: 1065 g ae ha" ^-1),
-     cex = 1.1,
-     col = "black",
-     font = 2)
+#text(x = 2500, y = 0.3, 
+     #labels = expression("1x rate: 1065 g ae ha" ^-1),
+     #cex = 1.1,
+     #col = "black",
+     #font = 2)
 
 
 dev.off()
