--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Atrazine/MIs_atra_GC _A101.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Atrazine/MIs_atra_GC _A101.Rmd
@@ -150,12 +150,12 @@ plot(model.LL3,
      ylim = c(0, 4),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
-     cex = 1.0,
-     cex.axis = 1,
-     cex.lab = 1.5,
-     cex.legend = 1.3,
-     legendPos = c(4500, 3.5),
-     lwd = 1)
+     cex = 1.5,
+     cex.axis = 1.3,
+     cex.lab = 1.9,
+     cex.legend = 1.8,
+     legendPos = c(4500, 3.8),
+     lwd = 1.5)
 
 
 
@@ -168,18 +168,18 @@ points(x = c(summary(model.LL3)$coefficients[5, 1],
 
 
 
-abline(v = 1121, 
-       lwd = 2, 
-       lty = "twodash",
-       col = "black")
+#abline(v = 1121, 
+       #lwd = 2, 
+       #lty = "twodash",
+       #col = "black")
 
 
 
-text(x = 2500, y = 0.9, 
-     labels = expression("1x rate: 1121 g ai ha" ^-1),
-     cex = 1.0,
-     col = "black",
-     font = 2)
+#text(x = 2500, y = 0.9, 
+     #labels = expression("1x rate: 1121 g ai ha" ^-1),
+     #cex = 1.0,
+     #col = "black",
+     #font = 2)
 
 
 dev.off()
