--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _A101.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/MIs_meso_GC _A101.Rmd
@@ -336,12 +336,12 @@ plot(model.LL3,
      ylim = c(0, 4.5),
      col = c("red", "darkgreen"),
      pch = c(19, 17),
-     cex = 1.0,
-     cex.axis = 1,
-     cex.lab = 1.5,
-     cex.legend = 1.3,
-     legendPos = c(400, 3.8),
-     lwd = 1)
+     cex = 1.5,
+     cex.axis = 1.3,
+     cex.lab = 1.9,
+     cex.legend = 1.8,
+     legendPos = c(400, 4.2),
+     lwd = 1.5)
 
 
 
@@ -354,35 +354,35 @@ points(x = c(summary(model.LL3)$coefficients[5, 1],
 
 
 
-abline(v = 105.1, 
-       lwd = 2, 
-       lty = "twodash",
-       col = "black")
+#abline(v = 105.1, 
+       #lwd = 2, 
+       #lty = "twodash",
+       #col = "black")
 
 
 
-text(x = 310, y = 2.2, 
-     labels = expression(paste("ED"[50] ~ "ambient = 0.03 ("%+-% "0.1)" ^A)),
-     cex = 1.1,
-     col = "black",
-     font = 2)
+#text(x = 310, y = 2.2, 
+     #labels = expression(paste("ED"[50] ~ "ambient = 0.03 ("%+-% "0.1)" ^A)),
+     #cex = 1.1,
+     #col = "black",
+     #font = 2)
 
 
 
-text(x = 315, y = 2.0, 
-     labels = expression(paste("ED"[50] ~ "elevated = 18.7 ("%+-% "1.5)" ^B)),
-     cex = 1.1,
-     col = "black",
-     font = 2)
+#text(x = 315, y = 2.0, 
+     #labels = expression(paste("ED"[50] ~ "elevated = 18.7 ("%+-% "1.5)" ^B)),
+     #cex = 1.1,
+     #col = "black",
+     #font = 2)
 
 
 
 
-text(x = 250, y = 0.7, 
-     labels = expression("1x rate: 105 g ai ha" ^-1),
-     cex = 1.1,
-     col = "black",
-     font = 2)
+#text(x = 250, y = 0.7, 
+     #labels = expression("1x rate: 105 g ai ha" ^-1),
+     #cex = 1.1,
+     #col = "black",
+     #font = 2)
 
 
 dev.off()
