--- a/PhD/Exacto/2022-114/Redroot/2022_114_DR_VR7DAT.Rmd
+++ b/PhD/Exacto/2022-114/Redroot/2022_114_DR_VR7DAT.Rmd
@@ -33,11 +33,11 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.EXT1494 <- summaryBy(cbind(vr_7dat, vr_14dat) ~ rate + name, data = subset(data, name=="EXT1494"),
+summary.EXT1494 <- summaryBy(cbind(vr_7dat) ~ rate + name, data = subset(data, name=="EXT1494"),
           FUN=fun)
 
 
-summary.Pursuit <- summaryBy(cbind(vr_7dat, vr_14dat) ~ rate + name, data = subset(data, name=="Pursuit"),
+summary.Pursuit <- summaryBy(cbind(vr_7dat) ~ rate + name, data = subset(data, name=="Pursuit"),
           FUN=fun)
 
 ```
@@ -134,55 +134,70 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 #SAVE TIFF
 
-#```{r}
+```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-108/DR_vr7DAT.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-114/Redroot/2022_114_DR_VR7DAT.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
+
 
 par(mar = c(5,5,1,1))
 
+
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Fomesafen dose (g ai ha"^-1, ")")),
+     xlab = expression(paste("Imazethapyr rate (g ai ha"^-1, ")")),
      ylab = expression(paste("Control 7 DAT (%)")),
-     col = c("red", "darkgreen"),
+     col = c("darkgreen", "red"),
      pch = c(19, 17),
-     cex = 1.2,
-     cex.axis = 1,
-     cex.lab = 1.5,
-     cex.legend = 1.4,
-     legendPos = c(1450, 85),
-     lwd = 1)
+     cex = 1.5,
+     cex.axis = 1.3,
+     cex.lab = 1.9,
+     cex.legend = 1.8,
+     legendPos = c(250, 40),
+     lwd = 1.5)
 
-abline(v = 280, 
-       lwd = 2, 
-       lty = "twodash",
-       col = "black")
 
-text(x = 650, y = 60, 
-     labels = expression(paste("ED"[50] ~ "Ratio = 1.2 ("%+-% "0.2)")),
-     cex = 1,
-     col = "black",
-     font = 2)
 
-text(x = 480, y = 55, 
-     labels = expression("p-value > 0.1"),
-     cex = 1,
-     col = "black",
-     font = 2)
 
-text(x = 650, y = 0.5, 
-     labels = expression("1x rate: 280 g ai ha" ^-1),
-     cex = 1.1,
-     col = "black",
-     font = 2)
+points(x = c(summary(model.LL3)$coefficients[5, 1], 
+             summary(model.LL3)$coefficients[6, 1]),
+       y = c((summary(model.LL3)$coefficients[3, 1]/2), 
+             (summary(model.LL3)$coefficients[4, 1]/2)),
+       pch = 8,
+       cex = 1.5)
+
+
+#abline(v = 1065, 
+       #lwd = 2, 
+       #lty = "twodash",
+       #col = "black")
+
+
+
+#text(x = 3450, y = 1.5, 
+     #labels = expression(paste("ED"[50] ~ "ambient = 44.1 ("%+-% "34.8)" ^A)),
+     #cex = 1.2,
+     #col = "black",
+     #font = 2)
+
+
+
+#text(x = 3500, y = 1.3, 
+     #labels = expression(paste("ED"[50] ~ "elevated = 126.0 ("%+-% "6.7)" ^B)),
+     #cex = 1.2,
+     #col = "black",
+     #font = 2)
+
+
+
+#text(x = 2500, y = 0.3, 
+     #labels = expression("1x rate: 1065 g ae ha" ^-1),
+     #cex = 1.1,
+     #col = "black",
+     #font = 2)
+
 
 dev.off()
 
+
 ```
-
-
-
-
-
-
