--- a/PhD/Exacto/2022-114/Redroot/2022_114_DR_VR14DAT.Rmd
+++ b/PhD/Exacto/2022-114/Redroot/2022_114_DR_VR14DAT.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exacto 2022-114 Dose Response Redroot VR14DAT"
+title: "Exacto 2022-114 Dose Response Redroot VR7DAT"
 author: "Felipe Faleco"
 date: "11/07/2022"
 output:
@@ -33,11 +33,11 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.EXT1494 <- summaryBy(cbind(vr_7dat, vr_14dat) ~ rate + name, data = subset(data, name=="EXT1494"),
+summary.EXT1494 <- summaryBy(cbind(vr_7dat) ~ rate + name, data = subset(data, name=="EXT1494"),
           FUN=fun)
 
 
-summary.Pursuit <- summaryBy(cbind(vr_7dat, vr_14dat) ~ rate + name, data = subset(data, name=="Pursuit"),
+summary.Pursuit <- summaryBy(cbind(vr_7dat) ~ rate + name, data = subset(data, name=="Pursuit"),
           FUN=fun)
 
 ```
@@ -48,7 +48,7 @@ summary.Pursuit <- summaryBy(cbind(vr_7dat, vr_14dat) ~ rate + name, data = subs
 
 ```{r}
 
-model.LL4<- drm(vr_14dat ~ rate, name, fct = LL.4(),  data = data)
+model.LL4<- drm(vr_7dat ~ rate, name, fct = LL.4(),  data = data)
 
 
 
@@ -79,7 +79,7 @@ mselect(model.LL4,  list(L.3(),  L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL2.3(),
 
 
 
-model.LL3<- drm(vr_14dat ~ rate, name, fct = LL.3(),  data = data, type = "continuous")
+model.LL3<- drm(vr_7dat ~ rate, name, fct = LL.3(),  data = data, type = "continuous")
 
 
 
@@ -112,9 +112,9 @@ ED(model.LL3, c(50, 90), type = "relative")
 
 ```{r}
 
-EDcomp(model.LL3, c(50, 50), type = "relative", interval = "none", reverse = F)
+EDcomp(model.LL3, c(50, 50), type = "relative", interval = "none", reverse = TRUE)
 
-EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none", reverse = F)
+EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none", reverse = TRUE)
 
 
 # Comparing b parameter (slope)
@@ -136,7 +136,7 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-114/Redroot/DR_Redroot_vr14DAT.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-114/Redroot/2022_114_DR_VR7DAT.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -145,16 +145,18 @@ par(mar = c(5,5,1,1))
 
 plot(model.LL3,
      type = "average",
-     xlab = expression(paste("Imazethapyr dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Control 14 DAT (%)")),
-     col = c("red", "darkgreen"),
+     xlab = expression(paste("Imazethapyr rate (g ai ha"^-1, ")")),
+     ylab = expression(paste("Control 7 DAT (%)")),
+     col = c("darkgreen", "red"),
      pch = c(19, 17),
-     cex = 1.1,
-     cex.axis = 1,
-     cex.lab = 1.5,
-     cex.legend = 1.4,
-     legendPos = c(250, 85),
-     lwd = 1)
+     cex = 1.5,
+     cex.axis = 1.3,
+     cex.lab = 1.9,
+     cex.legend = 1.8,
+     legendPos = c(250, 40),
+     lwd = 1.5)
+
+
 
 
 points(x = c(summary(model.LL3)$coefficients[5, 1], 
@@ -162,42 +164,40 @@ points(x = c(summary(model.LL3)$coefficients[5, 1],
        y = c((summary(model.LL3)$coefficients[3, 1]/2), 
              (summary(model.LL3)$coefficients[4, 1]/2)),
        pch = 8,
-       cex = 1.3)
+       cex = 1.5)
 
 
-abline(v = 70, 
-       lwd = 2, 
-       lty = "twodash",
-       col = "black")
+#abline(v = 1065, 
+       #lwd = 2, 
+       #lty = "twodash",
+       #col = "black")
 
 
-text(x = 150, y = 25, 
-     labels = expression(paste("ED"[50] ~ "Pursuit = 2.4 ("%+-% "0.3)" ^A)),
-     cex = 1.0,
-     col = "black",
-     font = 2)
+
+#text(x = 3450, y = 1.5, 
+     #labels = expression(paste("ED"[50] ~ "ambient = 44.1 ("%+-% "34.8)" ^A)),
+     #cex = 1.2,
+     #col = "black",
+     #font = 2)
 
 
-text(x = 160, y = 20, 
-     labels = expression(paste("ED"[50] ~ "EXT1494 = 6.1 ("%+-% "0.2)" ^B)),
-     cex = 1.0,
-     col = "black",
-     font = 2)
+
+#text(x = 3500, y = 1.3, 
+     #labels = expression(paste("ED"[50] ~ "elevated = 126.0 ("%+-% "6.7)" ^B)),
+     #cex = 1.2,
+     #col = "black",
+     #font = 2)
 
 
-text(x = 130, y = 5, 
-     labels = expression("1x rate: 70 g ai ha" ^-1),
-     cex = 1.1,
-     col = "black",
-     font = 2)
+
+#text(x = 2500, y = 0.3, 
+     #labels = expression("1x rate: 1065 g ae ha" ^-1),
+     #cex = 1.1,
+     #col = "black",
+     #font = 2)
 
 
 dev.off()
 
+
 ```
-
-
-
-
-
-
