--- a/PhD/Exacto/2022-114/Sorghum/2022_114_DR_biomass.Rmd
+++ b/PhD/Exacto/2022-114/Sorghum/2022_114_DR_biomass.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exacto 2022-114 Dose Response Sorghum VR14DAT"
+title: "Exacto 2022-114 Dose Response Redroot biomass"
 author: "Felipe Faleco"
 date: "11/07/2022"
 output:
@@ -23,7 +23,7 @@ library(plotrix)
 
 ```{r}
 
-data <- read.csv("data_2022_114_sorghum.csv")
+data <- read.csv("data_2022_114_redroot.csv")
 
 str(data)
 
@@ -33,11 +33,11 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.EXT1494 <- summaryBy(cbind(vr_7dat, vr_14dat) ~ rate + name, data = subset(data, name=="EXT1494"),
+summary.EXT1494 <- summaryBy(cbind(biomass) ~ rate + name, data = subset(data, name=="EXT1494"),
           FUN=fun)
 
 
-summary.Pursuit <- summaryBy(cbind(vr_7dat, vr_14dat) ~ rate + name, data = subset(data, name=="Pursuit"),
+summary.Pursuit <- summaryBy(cbind(biomass) ~ rate + name, data = subset(data, name=="Pursuit"),
           FUN=fun)
 
 ```
@@ -48,7 +48,7 @@ summary.Pursuit <- summaryBy(cbind(vr_7dat, vr_14dat) ~ rate + name, data = subs
 
 ```{r}
 
-model.LL4<- drm(vr_14dat ~ rate, name, fct = LL.4(),  data = data)
+model.LL4<- drm(biomass ~ rate, name, fct = LL.4(),  data = data)
 
 
 
@@ -79,18 +79,18 @@ mselect(model.LL4,  list(L.3(),  L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL2.3(),
 
 
 
-model.LL3<- drm(vr_14dat ~ rate, name, fct = LL.3(),  data = data, type = "continuous")
+#model.LL3<- drm(vr_28dat ~ rate, name, fct = LL.3(),  data = data, type = "continuous")
 
 
 
-modelFit(model.LL3)
+#modelFit(model.LL3)
 
 
-summary(model.LL3) # NO parameter c (lower limit). It means lower limit was set to zero.
+#summary(model.LL3) # NO parameter c (lower limit). It means lower limit was set to zero.
 
 
 
-anova(model.LL4, model.LL3) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+#anova(model.LL4, model.LL3) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -100,7 +100,7 @@ anova(model.LL4, model.LL3) # p-value > 0.05 means that there is no difference b
 
 ```{r}
 
-ED(model.LL3, c(50, 90), type = "relative") 
+ED(model.LL4, c(50, 90), type = "relative") 
 
 
 # Estimated doses required for ED50, and ED90. Estimation of ED90 is statistically less accurate and often subject to high variance. Therefore, is better to use ED50.
@@ -112,20 +112,20 @@ ED(model.LL3, c(50, 90), type = "relative")
 
 ```{r}
 
-EDcomp(model.LL3, c(50, 50), type = "relative", interval = "none", reverse = F)
+EDcomp(model.LL4, c(50, 50), type = "relative", interval = "none", reverse = TRUE)
 
-EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none", reverse = F)
+EDcomp(model.LL4, c(90, 90), type = "relative", interval = "none", reverse = TRUE)
 
 
 # Comparing b parameter (slope)
-compParm(model.LL3, strVal = "b", operator = "-")
+compParm(model.LL4, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.LL3, strVal = "d", operator = "-")
+compParm(model.LL4, strVal = "d", operator = "-")
 
 # Comparing e parameter (ED50)
-compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
+compParm(model.LL4, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
 
 
 ```
@@ -136,68 +136,68 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-114/Redroot/DR_Redroot_vr14DAT.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-114/Redroot/2022_114_DR_biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
 
 
-plot(model.LL3,
+plot(model.LL4,
      type = "average",
-     xlab = expression(paste("Imazethapyr dose (g ai ha"^-1, ")")),
-     ylab = expression(paste("Control 14 DAT (%)")),
-     col = c("red", "darkgreen"),
+     xlab = expression(paste("Imazethapyr rate (g ai ha"^-1, ")")),
+     ylab = expression(paste("Biomass (g plant"^-1, ")")),
+     col = c("darkgreen", "red"),
      pch = c(19, 17),
-     cex = 1.1,
-     cex.axis = 1,
-     cex.lab = 1.5,
-     cex.legend = 1.4,
-     legendPos = c(250, 85),
-     lwd = 1)
+     cex = 1.5,
+     cex.axis = 1.3,
+     cex.lab = 1.9,
+     cex.legend = 1.8,
+     legendPos = c(250, 40),
+     lwd = 1.5)
 
 
-points(x = c(summary(model.LL3)$coefficients[5, 1], 
-             summary(model.LL3)$coefficients[6, 1]),
-       y = c((summary(model.LL3)$coefficients[3, 1]/2), 
-             (summary(model.LL3)$coefficients[4, 1]/2)),
+
+
+points(x = c(summary(model.LL4)$coefficients[7, 1], 
+             summary(model.LL4)$coefficients[8, 1]),
+       y = c((summary(model.LL4)$coefficients[5, 1]/2), 
+             (summary(model.LL4)$coefficients[6, 1]/2)),
        pch = 8,
-       cex = 1.3)
+       cex = 1.5)
 
 
-abline(v = 70, 
-       lwd = 2, 
-       lty = "twodash",
-       col = "black")
+#abline(v = 1065, 
+       #lwd = 2, 
+       #lty = "twodash",
+       #col = "black")
 
 
-text(x = 150, y = 25, 
-     labels = expression(paste("ED"[50] ~ "Pursuit = 2.4 ("%+-% "0.3)" ^A)),
-     cex = 1.0,
-     col = "black",
-     font = 2)
+
+#text(x = 3450, y = 1.5, 
+     #labels = expression(paste("ED"[50] ~ "ambient = 44.1 ("%+-% "34.8)" ^A)),
+     #cex = 1.2,
+     #col = "black",
+     #font = 2)
 
 
-text(x = 160, y = 20, 
-     labels = expression(paste("ED"[50] ~ "EXT1494 = 6.1 ("%+-% "0.2)" ^B)),
-     cex = 1.0,
-     col = "black",
-     font = 2)
+
+#text(x = 3500, y = 1.3, 
+     #labels = expression(paste("ED"[50] ~ "elevated = 126.0 ("%+-% "6.7)" ^B)),
+     #cex = 1.2,
+     #col = "black",
+     #font = 2)
 
 
-text(x = 130, y = 5, 
-     labels = expression("1x rate: 70 g ai ha" ^-1),
-     cex = 1.1,
-     col = "black",
-     font = 2)
+
+#text(x = 2500, y = 0.3, 
+     #labels = expression("1x rate: 1065 g ae ha" ^-1),
+     #cex = 1.1,
+     #col = "black",
+     #font = 2)
 
 
 dev.off()
 
+
 ```
-
-
-
-
-
-
