--- a/PhD/Exacto/2022-114/Sorghum/2022_114_DR_VR21DAT.Rmd
+++ b/PhD/Exacto/2022-114/Sorghum/2022_114_DR_VR21DAT.Rmd
@@ -23,7 +23,7 @@ library(plotrix)
 
 ```{r}
 
-data <- read.csv("data_2022_114_redroot.csv")
+data <- read.csv("data_2022_114_sorghum.csv")
 
 str(data)
 
@@ -79,18 +79,18 @@ mselect(model.LL4,  list(L.3(),  L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL2.3(),
 
 
 
-model.LL3<- drm(vr_21dat ~ rate, name, fct = LL.3(),  data = data, type = "continuous")
+#model.LL3<- drm(vr_21dat ~ rate, name, fct = LL.3(),  data = data, type = "continuous")
 
 
 
-modelFit(model.LL3)
+#modelFit(model.LL3)
 
 
-summary(model.LL3) # NO parameter c (lower limit). It means lower limit was set to zero.
+#summary(model.LL3) # NO parameter c (lower limit). It means lower limit was set to zero.
 
 
 
-anova(model.LL4, model.LL3) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
+#anova(model.LL4, model.LL3) # p-value > 0.05 means that there is no difference between models. Therefore, we can use model LL.3
 
 ```
 
@@ -100,7 +100,7 @@ anova(model.LL4, model.LL3) # p-value > 0.05 means that there is no difference b
 
 ```{r}
 
-ED(model.LL3, c(50, 90), type = "relative") 
+ED(model.LL4, c(50, 90), type = "relative") 
 
 
 # Estimated doses required for ED50, and ED90. Estimation of ED90 is statistically less accurate and often subject to high variance. Therefore, is better to use ED50.
@@ -112,20 +112,20 @@ ED(model.LL3, c(50, 90), type = "relative")
 
 ```{r}
 
-EDcomp(model.LL3, c(50, 50), type = "relative", interval = "none", reverse = TRUE)
+EDcomp(model.LL4, c(50, 50), type = "relative", interval = "none", reverse = TRUE)
 
-EDcomp(model.LL3, c(90, 90), type = "relative", interval = "none", reverse = TRUE)
+EDcomp(model.LL4, c(90, 90), type = "relative", interval = "none", reverse = TRUE)
 
 
 # Comparing b parameter (slope)
-compParm(model.LL3, strVal = "b", operator = "-")
+compParm(model.LL4, strVal = "b", operator = "-")
 
 
 # Comparing d parameter (upper limit)
-compParm(model.LL3, strVal = "d", operator = "-")
+compParm(model.LL4, strVal = "d", operator = "-")
 
 # Comparing e parameter (ED50)
-compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
+compParm(model.LL4, strVal = "e", operator = "-") #here comparing the difference, and not the ratio like in the EDcomp
 
 
 ```
@@ -136,14 +136,14 @@ compParm(model.LL3, strVal = "e", operator = "-") #here comparing the difference
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-114/Redroot/2022_114_DR_VR21DAT.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/Exacto/2022-114/Sorghum/2022_114_DR_VR21DAT.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
 par(mar = c(5,5,1,1))
 
 
-plot(model.LL3,
+plot(model.LL4,
      type = "average",
      xlab = expression(paste("Imazethapyr rate (g ai ha"^-1, ")")),
      ylab = expression(paste("Control 21 DAT (%)")),
@@ -159,10 +159,10 @@ plot(model.LL3,
 
 
 
-points(x = c(summary(model.LL3)$coefficients[5, 1], 
-             summary(model.LL3)$coefficients[6, 1]),
-       y = c((summary(model.LL3)$coefficients[3, 1]/2), 
-             (summary(model.LL3)$coefficients[4, 1]/2)),
+points(x = c(summary(model.LL4)$coefficients[7, 1], 
+             summary(model.LL4)$coefficients[8, 1]),
+       y = c((summary(model.LL4)$coefficients[5, 1]/2), 
+             (summary(model.LL4)$coefficients[6, 1]/2)),
        pch = 8,
        cex = 1.5)
 
